# ARBI-TR

./: .gitignore  .k8s-sample.yaml.swp  .k8s_sample.yaml.swp  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  build_output.txt  client.README.md  client.pyproject.toml  docker-compose.no-tls.yaml  docker-compose.test.yaml  docker-compose.tls.yaml  docker-compose.yaml  dockerize.sh  openapi.json  package-lock.json  push-images.sh  pyproject.toml  transcription.docx  transcription.txt  whisper-api.py
.github/workflows/: ci.yaml  publish-client.yaml
backend/: .dockerignore  Dockerfile  entrypoint.sh  main.py  pyproject.toml  run-backend.sh  setup_certs.sh  start-api.sh  utils.py  whisper-api.py
backend/tests/: test_api.py  test_utils.py
backend/tests/integration/: conftest.py  test_integration.py
cert-gen/: Dockerfile  cert-cron  cert-init.py  create_ca.sh  generate-certs.sh
docker/: Dockerfile  pyproject.toml
docs/: pull_request_template.md
frontend/: Dockerfile  about.md  app.py  entrypoint.sh  languages.txt  main.py  pyproject.toml  run-frontend.sh  setup_certs.sh  st-frontend.py  st-frontend8001.py  tools.py  transcribe_tab.py  transcribe_tools.py  transcribe_ui.py  transcription.docx
frontend/.streamlit/: config.toml
frontend/tests/: test_transcribe_tools.py
notebooks/: audio_processing.proto  audio_processing_pb2.py  audio_processing_pb2_grpc.py  distil_whisper.ipynb  experiment_whisper.ipynb  grpc-client.py  grpc-server.py  hf_unified.py  whisper.ipynb  whisperx.ipynb
old-scripts/: dl-channel2.py  ins-refact.py  real_time_transcription.py  st_transcribe.py  transcribe.py  whisper-api.py
scripts/: Dockerfile  benchmark.sh  generate-certificates.sh  generate-client.sh  release.sh  run-ci-local.sh  run-integration-tests.sh
transcribe/: real_time_transcription.py  st_transcribe.py  transcribe.py
