[tool.poetry]
name = "whisper-new"
version = "0.2.5"
description = ""
authors = ["dev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
accelerate = "^0.27.2"
numpy = "^1.26.4"
torch = "^2.2.0"
torchaudio = "^2.2.0"
scikit-learn = "^1.4.0"
transformers = "^4.37.2"
pyannote-audio = "^3.1.1"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"
pandas = "^2.2.1"
speechbrain = "~0.5.16"
torchvision = "^0.18.0"
grpcio-tools = "^1.63.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
