[project]
name = "arbi-tr"
version = "1.0.0"
description = "ARBI transcription service — faster-whisper + pyannote 4.x"
license = {text = "MIT"}
authors = [{name = "dev"}]
requires-python = ">=3.11"
dependencies = [
    # Core ML — torch from PyTorch CUDA index (see [tool.uv.sources])
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "faster-whisper>=1.1.0",
    "pyannote-audio>=4.0.4",
    "transformers>=4.40.0",
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Utilities
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
