[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Dmitri Evseev <dmitri.evseev@arbi.city>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.1"
requests = "^2.31.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
