[project]
name = "arbi-tr-frontend"
version = "0.1.2"
description = ""
license = {text = "MIT"}
authors = [{name = "arbi-dev", email = "dev@arbi.city"}]
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "requests",
    "pandas",
    "yt-dlp",
    "cachetools",
]

[tool.uv]
dev-dependencies = [
    "pylint",
    "autopep8",
]
