[project]
name = "arbi-tr-frontend"
version = "0.1.2"
description = ""
license = {text = "MIT"}
authors = [{name = "arbi-dev", email = "dev@arbi.city"}]
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "requests",
    "pandas",
    "yt-dlp",
    "cachetools",
]

[dependency-groups]
dev = [
    "pylint",
    "autopep8",
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
